solved alignment issue of features section

--- a/html-2/style3.css
+++ b/html-2/style3.css
@@ -227,22 +227,24 @@ body {
     top: -1.7rem;
 }
 .part2pc {
+    width: 100%;
     display: inline-flex;
 }
 #contactform1 {
-    width: 70%;
+    width: 64.6%;
     justify-content: start;
     position: relative;
 }
 .contactform {
     background-color: white;
     padding: 5%;
-    width: 50%;
+    width: 42%;
     margin: 4%;
-    margin-left: 50%;
+    margin-left: 52.3%;
+    margin-right: 0;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     position: absolute;
-    top: -60%;
+    top: -75%;
     left: -10%;
 }
 .contact_group {
@@ -257,8 +259,8 @@ body {
     font-size: 0.9rem;
 }
 .contact_group input {
-    width: 90%;
-    padding: 0.7rem;
+    width: 91%;
+    padding: 4%;
     border: 1px solid #e2e2e2;
     border-radius: 1px;
     outline: none;
@@ -285,6 +287,7 @@ body {
     display: block;
     padding-right: 21.5%;
     margin: 2%;
+    margin-left: 0;
     margin-top: 4%;
 }
 #mone {
@@ -295,17 +298,18 @@ body {
     font-size: larger;
 }
 #features {
-    width: 68%;
+    /* width: 68%; */
     display: grid;
     grid-template-columns: auto auto auto;
     padding-left: 15.4%;
     padding-right: 16.6%;
 }
 .feature {
-    width: 90%;
+    width: 85%;
     padding: 3%;
     margin: 3%;
     margin-left: 5%;
+    margin-bottom: 5%;
     border: #cacaca solid 1px;
     font-size: large;
 }
